E2J/part4/t16.output
running e2j
redeclaration of variable a
redeclaration of variable a
redeclaration of variable a
redeclaration of variable a
compiling the Java generated code
My_e2j.java:3: error: illegal start of expression
=
^
My_e2j.java:4: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:6: error: unclosed string literal
"
^
My_e2j.java:8: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:8: error: not a statement
System.out.println"
          ^
My_e2j.java:9: error: unclosed string literal
"
^
My_e2j.java:11: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:11: error: not a statement
System.out.println"
          ^
My_e2j.java:12: error: unclosed string literal
"
^
My_e2j.java:14: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:14: error: not a statement
System.out.println"
          ^
My_e2j.java:15: error: unclosed string literal
"
^
My_e2j.java:16: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:16: error: not a statement
System.out.println"
          ^
My_e2j.java:17: error: unclosed string literal
"
^
My_e2j.java:20: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:20: error: not a statement
System.out.println"
          ^
My_e2j.java:21: error: unclosed string literal
"
^
My_e2j.java:23: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:23: error: not a statement
System.out.println"
          ^
My_e2j.java:24: error: unclosed string literal
"
^
My_e2j.java:26: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:26: error: not a statement
System.out.println"
          ^
My_e2j.java:27: error: unclosed string literal
"
^
My_e2j.java:28: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:28: error: not a statement
System.out.println"
          ^
My_e2j.java:29: error: unclosed string literal
"
^
My_e2j.java:32: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:32: error: not a statement
System.out.println"
          ^
My_e2j.java:33: error: unclosed string literal
"
^
My_e2j.java:35: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:35: error: not a statement
System.out.println"
          ^
My_e2j.java:36: error: unclosed string literal
"
^
My_e2j.java:38: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:38: error: not a statement
System.out.println"
          ^
My_e2j.java:39: error: unclosed string literal
"
^
My_e2j.java:40: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:40: error: not a statement
System.out.println"
          ^
My_e2j.java:41: error: unclosed string literal
"
^
My_e2j.java:44: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:44: error: not a statement
System.out.println"
          ^
My_e2j.java:45: error: unclosed string literal
"
^
My_e2j.java:47: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:47: error: not a statement
System.out.println"
          ^
My_e2j.java:48: error: unclosed string literal
"
^
My_e2j.java:50: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:50: error: not a statement
System.out.println"
          ^
My_e2j.java:51: error: unclosed string literal
"
^
My_e2j.java:52: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:52: error: not a statement
System.out.println"
          ^
My_e2j.java:53: error: unclosed string literal
"
^
51 errors
